--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
 anthropic
-backoff==2.2.1
+backoff
 datasets
-einops==0.6.1
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
+bitsandbytes==0.41.3.post2
+deepspeed==0.15.1
+einops
+matplotlib
+matplotlib-inline
 ninja==1.11.1
-openai==1.13.3
-optimum==1.13.2
+numpy>=2.0
+openai>=1.51.0
 pandas==1.5.3
 peft==0.5.0
 protobuf==4.24.3
-pydantic==2.6.0
-python-dotenv==1.0.0
-pyyaml==6.0.1
+pydantic>=2.0.0
+python-dotenv
+pyyaml
+PyYAML
+Requests
+rich
 seaborn
 sentence_transformers
 sentencepiece==0.1.99
 scipy==1.10.1
 spacy
-torch==2.0.1
-transformers
-trl==0.7.1
+torch>=2.0.1
+transformers>=4.41.2
+trl>=0.7.10
+wandb
