Add further dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "fonttools==4.58.5",
     "frozenlist==1.7.0",
     "fsspec==2025.3.0",
+    "fuzzysearch==0.8.0",
     "gitdb==4.0.12",
     "gitpython==3.1.44",
     "h11==0.16.0",
