Continue setting up our first experiment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "backoff==2.2.1",
     "bitsandbytes==0.41.3.post2",
     "blis==1.2.1",
+    "boto3>=1.39.3",
     "catalogue==2.0.10",
     "certifi==2025.6.15",
     "charset-normalizer==3.4.2",
