--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,7 @@ dependencies = [
     "anyio==4.9.0",
     "attrs==25.3.0",
     "backoff==2.2.1",
-    "bitsandbytes==0.41.3.post2",
     "blis==1.2.1",
-    "boto3>=1.39.3",
     "catalogue==2.0.10",
     "certifi==2025.6.15",
     "charset-normalizer==3.4.2",
@@ -44,7 +42,7 @@ dependencies = [
     "hf-xet==1.1.5",
     "hjson==3.1.0",
     "httpcore==1.0.9",
-    "httpx==0.28.1",
+    "httpx==0.26.0",
     "huggingface-hub==0.33.2",
     "humanfriendly==10.0",
     "idna==3.10",
@@ -131,6 +129,12 @@ dependencies = [
 ]
 
 [dependency-groups]
+# the docker image will handle the installation of torch
+# and flash-attn.
+# flash-attn requires knowing runtime information about the
+#
 cuda = [
-    "torch==2.7.1",
+    "bitsandbytes==0.46.1",
+    "torch==2.7.0", # 2.7.0.dev20250310+cu128
+    "flash-attn==2.8.0.post2",
 ]
