--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ dependencies = [
     "wandb==0.21.0",
     "wasabi==1.1.3",
     "weasel==0.4.1",
+    "wheel==0.45.1",
     "wrapt==1.17.2",
     "xxhash==3.5.0",
     "yarl==1.20.1",
