--- a/experiments/configs/standard_experiment.yaml
+++ b/experiments/configs/standard_experiment.yaml
@@ -10,7 +10,7 @@ debater-untrained-judge-untrained:
       - model_settings:
           model_type: llama3
           model_file_path: /home/ubuntu/mars-arnesen-gh/downloaded-models/gradientai/Llama-3-8B-Instruct-262k
-          alias: "experiment debate - untrained"
+          alias: "untrained-mega-llama"
           require_quote_validation: True
           generation_params:
             temperature: 0.5
@@ -23,7 +23,7 @@ debater-untrained-judge-untrained:
     dataset_type: quality
     split_type: val
 debater-untrained-judge-trained:
-  batch_size: 16
+  batch_size: 1
   num_speeches: 2
   flip: False
   enable_self_debate: True
@@ -34,7 +34,31 @@ debater-untrained-judge-trained:
       - model_settings:
           model_type: llama3
           model_file_path: /home/ubuntu/mars-arnesen-gh/downloaded-models/gradientai/Llama-3-8B-Instruct-262k
-          alias: "experiment debate - untrained"
+          alias: "untrained-mega-llama"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-41-judge
+        model_file_path: ft:gpt-4.1-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge:Br2DCPKx
+  dataset:
+    dataset_type: quality
+    split_type: val
+debater-trained-judge-untrained:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/models/trained_models/llama-3-mega-merged
+          alias: "leo-sft-model"
           require_quote_validation: True
           generation_params:
             temperature: 0.5
@@ -42,6 +66,30 @@ debater-untrained-judge-trained:
       model_settings:
         model_type: openai
         alias: openai-judge
+        model_file_path: gpt-4.1-2025-04-14
+  dataset:
+    dataset_type: quality
+    split_type: val
+debater-trained-judge-trained:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/models/trained_models/llama-3-mega-merged
+          alias: "leo-sft-model"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-41-judge
         model_file_path: ft:gpt-4.1-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge:Br2DCPKx
   dataset:
     dataset_type: quality
