--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "jinja2==3.1.6",
     "jiter==0.10.0",
     "joblib==1.5.1",
+    "jsonschema>=4.24.0",
     "kiwisolver==1.4.8",
     "langcodes==3.5.0",
     "language-data==1.3.0",
