--- a/run_orchestrator/runs/trained_debaters.yaml
+++ b/run_orchestrator/runs/trained_debaters.yaml
@@ -1,10 +1,12 @@
 configurations:
   - instance_ip: 150.136.69.141
+    home_dir: /home/ubuntu/mars-arnesen-gareth
     configurations:
       name: debater-trained-judge-untrained
       num_iters: 100
       count: 2
   - instance_ip: 192.222.50.9
+    home_dir: /home/ubuntu/mars-arnesen-gh
     configurations:
       name: debater-trained-judge-untrained
       num_iters: 100
