--- a/run_orchestrator/runs/trained_debaters.yaml
+++ b/run_orchestrator/runs/trained_debaters.yaml
@@ -5,3 +5,9 @@ configurations:
       name: debater-trained-judge-untrained
       num_iters: 100
       count: 2
+  - instance_ip: 192.222.50.9
+    home_dir: /home/ubuntu/mars-arnesen-gh
+    configurations:
+      name: debater-trained-judge-untrained
+      num_iters: 100
+      count: 4
