--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@ __pycache__/
 .venv
 downloaded-models
 models/trained_models
+sft_data
+stats
+transcripts
+wandb
+graphs
+home
+runs
 **/outputs/**
 tmp
 cache
