--- a/experiments/configs/standard_experiment.yaml
+++ b/experiments/configs/standard_experiment.yaml
@@ -9,7 +9,7 @@ debater-untrained-judge-untrained:
     debaters:
       - model_settings:
           model_type: llama3
-          model_file_path: /home/ubuntu/mars-arnesen-gh/downloaded-models/gradientai/Llama-3-8B-Instruct-262k
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/downloaded-models/gradientai/Llama-3-8B-Instruct-262k
           alias: "untrained-mega-llama"
           require_quote_validation: True
           generation_params:
@@ -33,7 +33,7 @@ debater-untrained-judge-trained:
     debaters:
       - model_settings:
           model_type: llama3
-          model_file_path: /home/ubuntu/mars-arnesen-gh/downloaded-models/gradientai/Llama-3-8B-Instruct-262k
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/downloaded-models/gradientai/Llama-3-8B-Instruct-262k
           alias: "untrained-mega-llama"
           require_quote_validation: True
           generation_params:
@@ -57,8 +57,32 @@ debater-trained-judge-untrained:
     debaters:
       - model_settings:
           model_type: llama3
-          model_file_path: /home/ubuntu/mars-arnesen-gh/models/trained_models/llama-3-mega-merged
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-mega-merged
           alias: "leo-sft-model"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-judge
+        model_file_path: gpt-4.1-2025-04-14
+  dataset:
+    dataset_type: quality
+    split_type: val
+debater-rl-trained-0711-judge-untrained:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-drpo-round1
+          alias: "dpo-rl-0711-model"
           require_quote_validation: True
           generation_params:
             temperature: 0.5
@@ -81,7 +105,7 @@ debater-trained-judge-trained:
     debaters:
       - model_settings:
           model_type: llama3
-          model_file_path: /home/ubuntu/mars-arnesen-gh/models/trained_models/llama-3-mega-merged
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-mega-merged
           alias: "leo-sft-model"
           require_quote_validation: True
           generation_params:
@@ -104,7 +128,7 @@ Data Generation - Llama3 - SingleRound - FullTrain - SFT:
     debaters:
       - model_settings:
           model_type: llama3
-          model_file_path: /home/ubuntu/mars-arnesen-gh/models/trained_models/llama-3-mega-merged
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-mega-merged
           alias: "t1-sft"
           require_quote_validation: True
           generation_params:
@@ -168,7 +192,7 @@ Data Generation - Llama3 - SingleRound - FullTrain - SFT - Consultancy:
     dataset_type: quality
     split_type: train
     flip_sides: False
-Data Generation - Llama3 - MultiRound - HalfBranched - FullTrain - DPO:
+DataGenerationLlama3MultiRoundHalfBranchedFullTrainDPO:
   batch_size: 1
   num_speeches: 2
   flip: True
@@ -178,17 +202,17 @@ Data Generation - Llama3 - MultiRound - HalfBranched - FullTrain - DPO:
     debaters:
       - model_settings:
           model_type: llama3
-          model_file_path: /vast/spa9663/models/trained_models/llama-3-DPO-811-FullTrainDebateLowLR-test
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-mega-merged
           alias: "r1-dpo"
           require_quote_validation: True
           generation_params:
             temperature: 0.5
-          peft_base_model: /vast/spa9663/models/trained_models/llama-3-mega-merged
+#          peft_base_model: /vast/spa9663/models/trained_models/llama-3-mega-merged
     judge:
       model_settings:
         model_type: openai
         alias: openai-judge
-        model_file_path: ft:gpt-4-0613:nyu-arg::90NW3Tbx
+        model_file_path: ft:gpt-4.1-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge:Brlimq17:ckpt-step-1290
   dataset:
     dataset_type: quality
     split_type: train
