--- a/experiments/configs/standard_experiment.yaml
+++ b/experiments/configs/standard_experiment.yaml
@@ -94,6 +94,30 @@ debater-rl-trained-0711-judge-untrained:
   dataset:
     dataset_type: quality
     split_type: val
+debater-rl-trained-0731-judge-trained-0731:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/leonidtsyplenkov/models/trained_models/llama-3-mega-merged-no-judge-speeches-31.07
+          alias: "dpo-rl-0731-model"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-judge-ft-0731
+        model_file_path: ft:gpt-4.1-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge-31-07:BzYGc8SU
+  dataset:
+    dataset_type: quality
+    split_type: val
 debater-trained-judge-trained:
   batch_size: 1
   num_speeches: 2
