Add changes to lojban generation.

--- a/experiments/configs/test_experiment.yaml
+++ b/experiments/configs/test_experiment.yaml
@@ -918,5 +918,5 @@ Lojban_Test:
         model_type: random
         alias: random-judge
   dataset:
-    full_dataset_file_path: data\datasets\lojban\lojban_dataset.jsonl
+    full_dataset_file_path: data/datasets/lojban/lojban_dataset.jsonl
     dataset_type: lojban
