--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ dependencies = [
     "spacy-legacy==3.0.12",
     "spacy-loggers==1.0.5",
     "srsly==2.5.1",
+    "statsmodels>=0.14.5",
     "sympy==1.14.0",
     "thinc==8.3.4",
     "threadpoolctl==3.6.0",
